fix hard to see icon background'

--- a/messenger/css/code-08.css
+++ b/messenger/css/code-08.css
@@ -36,7 +36,9 @@
 ._7301._hh7._hh7._6ybn,
 ._6ymu,
 ._6-xp,
-._5l37 .clearfix {
+._5l37 .clearfix,
+._6y56,
+._6ybv {
   background-color: transparent !important;
 }
 
